Fixes overflow issue as well as highlighting
Source https://www.gatsbyjs.org/packages/gatsby-remark-prismjs/

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -631,6 +631,30 @@ pre tt:after {
   border-left: 0.25em solid #f99;
 }
 
+.gatsby-highlight {
+  background-color: #1d1f21;
+  border-radius: 0.3em;
+  margin: 0.5em 0;
+  padding: 1em;
+  overflow: auto;
+}
+
+/**
+ * Remove the default PrismJS theme background-color, border-radius, margin,
+ * padding and overflow.
+ * 1. Make the element just wide enough to fit its content.
+ * 2. Always fill the visible space in .gatsby-highlight.
+ * 3. Adjust the position of the line numbers
+ */
+.gatsby-highlight pre[class*="language-"] {
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  overflow: initial;
+  float: left; /* 1 */
+  min-width: 100%; /* 2 */
+}
+
 .container {
   max-width: 860px;
   margin: 0 auto;
